# tama

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml
design/: build.md  cli.md  observability.md  overview.md  primitives.md  principles.md  roadmap.md  runtime.md  skills.md
docs/: astro.config.mjs  competitor-analysis.md  package-lock.json  package.json
examples/01-react-search/: result.md  tama-preview.html  tama.toml
examples/02-deep-research/: report.md  tama-preview.html  tama.toml
examples/03-poem-pipeline/: tama.toml
examples/04-parallel-writers/: tama.toml
examples/05-style-contest/: tama.toml
examples/06-critic/: tama.toml
examples/07-reflexion/: tama.toml
examples/08-constitutional/: tama.toml
examples/09-chain-of-verification/: tama.toml
examples/10-plan-execute/: tama.toml
examples/11-debate/: tama.toml
examples/12-best-of-n/: tama.toml
examples/13-all-patterns/: tama.toml
examples/14-airline-service/: tama.toml
examples/15-research-report/: tama.toml
examples/16-faang-headcount/: tama.toml
examples/17-it-incident/: tama.toml
examples/18-stock-analysis/: tama.toml
examples/19-trip-planner/: tama.toml
examples/20-code-review/: tama.toml
examples/21-ai-debate/: tama.toml
examples/22-newsletter/: tama.toml
examples/23-fact-checker/: tama.toml
src/: config.rs  lib.rs  tama.rs  tamad.rs
src/cmd/: add.rs  brew.rs  init.rs  mod.rs  models.rs  run.rs  runs.rs  view.rs
src/runtime/: debug_hook.rs  (+7 more)
web/: index.html  package-lock.json  package.json  vite.config.js
(+200 files in other folders)
